# nir2

./: CMakeLists.txt  main.c
picaro/: galois_arithmetics.c  galois_arithmetics.h  integral_properties_check.c  integral_properties_check.h  matrices.c  matrices.h  picaro_cipher.h  picaro_key_generation.c  round_function.c  sbox_picaro.c  sbox_picaro.h
